# kalong

./: .babelrc  .editorconfig  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  LICENSE  README.md  TODO.md  eslint.config.cjs  index.html  package-lock.json  package.json  pyproject.toml  setup.py  test.py  vite.config.js  webpack.config.babel.js
examples/: aiohttp.py  error_chain.py  error_ignored_in_script.py  error_in_script.py  error_in_with.py  error_in_with_advanced.py  error_in_with_below.py  error_in_with_below_under.py  error_in_with_under.py  error_not_ignored_in_script.py  forks.py  injection_exemple.py  instances.py  latin-1.py  loop.py  movement.py  multifile.py  multifile_utils.py  objects.py  osfork.py  recursive_object.py  scope.py  stepping_in_big_files.py  threads.py  trace_in_script.py
exemples/: complicated_hierarchy.py  error_ignored_in_script.py  error_in_with.py  error_in_with_advanced.py  error_in_with_below.py  error_in_with_under.py  error_not_ignored_in_script.py  forks.py  injection_exemple.py  objects.py  threads.py
kalong/: __about__.py  __init__.py  __main__.py  communication.py  config.py  debugger.py  errors.py  forking.py  index.html  loops.py  server.py  stepping.py  tools.py  tracing.py  websockets.py
kalong/assets/: app.js  front.js  index.html
kalong/front/: App.js  Code.js  Frame.js  Frames.js  GlobalIndicator.js  Interpreter.js  Main.js  Prompt.js  Scrollback.js  SideDrawer.js  Source.js  Splitter.js  Terminal.js  ThemedApp.js  Top.js  TopActions.js  TopBar.js  actions.js  index.ejs  index.js  reducer.js  util.js  websocketMiddleware.js
kalong/front/Answer/: AnswerDispatch.js  ClassBases.js  Diff.js  Err.js  Exception.js  ExceptionPart.js  Inspect.js  Inspectable.js  Iterable.js  Mapping.js  Obj.js  Out.js  index.js
kalong/front/Code/: Dialog.js  Gutter.js  Highlight.js  Hint.js  InView.js  Line.js  Snippet.js  Source.js  codemirror.js  context.js  index.js
kalong/front/Prompt/: index.js  searchReducer.js  utils.js  valueReducer.js
kalong/utils/: __init__.py  io.py  iterators.py  obj.py
kalong/utils/doc_lookup/: __init__.py  lookup.json
public/: index.html
src/: App.js  App.jsx  Code.js  Frame.js  Frame.jsx  Frames.js  Frames.jsx  GlobalIndicator.jsx  Interpreter.js  Main.jsx  Prompt.js  Scrollback.js  SideDrawer.jsx  Snippet.js  Snippet.jsx  Source.js  Source.jsx  Splitter.jsx  Terminal.jsx  ThemedApp.jsx  TopActions.jsx  TopBar.jsx  actions.js  codemirror.js  extensions.js  index.js  index.jsx  reducer.js  store.js  util.js  watchingMiddleware.js  websocketMiddleware.js
src/Answer/: AnswerDispatch.jsx  ClassBases.jsx  Diff.jsx  Err.jsx  Exception.jsx  ExceptionPart.jsx  Inspect.jsx  Inspectable.jsx  Iterable.jsx  Obj.jsx  Out.jsx  Raw.js  Table.jsx  index.jsx
src/Code/: Dialog.jsx  Gutter.jsx  Line.jsx  Snippet.jsx  Source.jsx
src/Prompt/: Breakpoints.jsx  Help.jsx  index.jsx  searchReducer.js  utils.js  valueReducer.js
tools/: gen_doc_lookup_file.py
