[tool.poetry]
name = "kalong"
version = "0.4.1"
description = "A new take on python debugging"
authors = ["Florian Mounier <paradoxxx.zero@gmail.com>"]
license = "GPLv3+"
include = ["kalong/static/**/*"]
homepage = "https://github.com/paradoxxxzero/kalong"
keywords = ['debugger']
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = ">=3.8.1, <4.0"
aiohttp = "^3.8.1"
jedi = "^0.18.1"

[tool.poetry.extras]
cutter = ["cutter"]
disassembly = ["uncompyle6"]

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
Sphinx = "^4.3.2"
cutter = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py310']
include = '\.py$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
