[project]
name = "kalong"
dynamic = ["version"]
description = "A new take on python debugging"
requires-python = ">=3.8"
readme = "README.md"
authors = [{ name = "Florian Mounier", email = "paradoxxx.zero@gmail.com" }]
license = "GPL-3.0-or-later"
homepage = "https://github.com/paradoxxxzero/kalong"
keywords = ['debugger']
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]
dependencies = [
    "aiohttp>=3.10.6",
    "cutter>=0.5.0",
    "jedi>=0.19.1",
]

[project.scripts]
kalong = "kalong:main"

[project.optional-dependencies]
disassembly = ["uncompyle6>=3.9.2"]
recursive = ["nest-asyncio>=1.6.0"]

[dependency-groups]
dev = ["pre-commit>=3.5.0", "sphinx>=7.1.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "kalong/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["kalong"]
artifacts = ["kalong/static/*"]


[tool.hatch.build.targets.wheel]
include = ["kalong"]
artifacts = ["kalong/static/*"]
